# visual-quality-control-agent

./: .dockerignore  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
agent/: decisions.py  graph.py  guardrails.py  llm.py  nodes.py  state.py  tools.py
contracts/: models.py
docs/superpowers/plans/: 2026-06-01-drift-monitor.md
docs/superpowers/specs/: 2026-06-01-drift-monitor-design.md
drift/: extractor.py  monitor.py  reference.py  report.py  scoring.py  stats.py
eval/: agent_eval.py  drift_eval.py  perception_eval.py  scenarios.yaml
memory/: mes.py  schema.sql  seed.py
perception/: detector.py  prepare_data.py  train.py
service/: Dockerfile  app.py
tests/: test_decision_logic.py  test_drift_escalation.py  test_drift_extractor.py  test_drift_monitor.py  test_drift_reference.py  test_drift_regression.py  test_drift_report.py  test_drift_scoring.py  test_escalation.py  test_nodes.py  test_perception_regression.py  test_reasoning_scenarios.py  test_service.py
ui/: streamlit_app.py
